<resources>
    <string name="app_name">CutreRecetas</string>
    <string name="recetas">Recetas</string>
    <string name="a_adir">Añadir</string>
    <string name="completada">Completada</string>
    <string name="new_recipe">Nueva Receta</string>
    <string name="nombre">Nombre</string>
    <string name="desc">Descripción</string>
    <string name="imagen">Imagen</string>
    <string name="agregar">Agregar</string>
    <string name="home">Inicio</string>
    <string name="config">Configuración</string>
    <string name="about">Sobre la App</string>
    <string name="open_nav">Abrir Navigation Drawer</string>
    <string name="close_nav">Cerrar Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>