<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/terra">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtPP1"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="20dp"
            android:text="@string/new_recipe" />

        <EditText
            android:id="@+id/edtTxtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/nombre" />

        <EditText
            android:id="@+id/edtTxtDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgView1"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="50dp"
                android:layout_height="70dp" />

            <Button
                android:id="@+id/btnPic"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_weight="1"
                android:backgroundTint="#ddCCCCAA"
                android:text="@string/imagen" />
        </LinearLayout>

        <Spinner
            android:id="@+id/spnRecipe"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:outlineAmbientShadowColor="@color/sand"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <Button
            android:id="@+id/btnRcp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:backgroundTint="#ddCCCCAA"
            android:text="@string/agregar" />

    </LinearLayout>

</RelativeLayout>